fix martini lunch spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,10 +105,7 @@ div { }
   text-decoration: underline;
 }
 
-.martini-head{
-  text-align: left;
-  padding-left: 30px;
-}
+
 
 /* --------------- About Us Styles ----------*/
 .columns img{
@@ -118,8 +115,13 @@ div { }
 .container h3{
   font-size: 2em;
   color: #d94338;
+  text-align: left;
 }
 
+.rest-row img{
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 /* -------------- Table Styles -------------*/
 #sub {
  -webkit-border-radius: 28;
@@ -213,5 +215,10 @@ input: focus, input: hover {
   .highlight-row{
     background-color: none;
   }
+
+  .martini-head{
+  text-align: left;
+}
+
 }
 
